Edite el parrafo "Creada por perricornios"
Estoy probando como hacer los cambios desde aca

--- a/ChromeExtensionTest/index.html
+++ b/ChromeExtensionTest/index.html
@@ -31,7 +31,7 @@ data-toggle="dropdown">Acceder</button>
 </div>
 
 <body>
-    <p>Creada por Perricornios</p>
+    <p> Creada por Perricornios - Probando </p> 
     
 </body>
 </html>
