--- a/ChromeExtensionTest/index.html
+++ b/ChromeExtensionTest/index.html
@@ -29,9 +29,14 @@ data-toggle="dropdown">Acceder</button>
     <input type="checkbox" name="Datos" id="Datos">
     <label for="Datos" >Datos</label>
 </div>
+</div>
+<div class="form-group">
+    <input type="checkbox" name="Webs" id="Webs">
+    <label for="Webs" >Webs</label>
+</div>
 
 <body>
-    <p> Creada por Perricornios - Probando </p> 
+    <p>Creada por Perricornios</p>
     
 </body>
 </html>
