--- a/ChromeExtensionTest/index.html
+++ b/ChromeExtensionTest/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+
 <h3 id="saludar">Hola! Bienvenido a la Extension AppBuelito!</h3>
 <input type="text" id="usuario" placeholder="Usuario.">
 </input>
@@ -36,7 +38,11 @@ data-toggle="dropdown">Acceder</button>
 </div>
 
 <body>
-    <p>Creada por Perricornios</p>
-    
+
+    <h1>Seguridad de la Pagina Actual</h1>
+    <div id="security-info"></div>
+    <script src="popup.js"></script>
+
+   
 </body>
 </html>
